tests/baselines/reference/importDeclWithDeclareModifier.errors.txt
importDeclWithDeclareModifier.ts(5,9): error TS1029: 'export' modifier must precede 'declare' modifier.
importDeclWithDeclareModifier.ts(5,29): error TS2694: Namespace 'x' has no exported member 'c'.


==== importDeclWithDeclareModifier.ts (2 errors) ====
    module x {
        interface c {
        }
    }
    declare export import a = x.c;
            ~~~~~~
!!! error TS1029: 'export' modifier must precede 'declare' modifier.
                                ~
!!! error TS2694: Namespace 'x' has no exported member 'c'.
    var b: a;
    